--- a/index.html
+++ b/index.html
@@ -13,17 +13,25 @@
 
 <body>
     <form>
+
+        <!-- form border with "title" -->
         <fieldset>
+            <!-- title -->
             <legend> Authentication </legend>
-            <fieldset>
+
+            <!-- input area (login data) -->
+            <fieldset id="login-data">
                 <label>Email:</label>
                 <input type="email" placeholder="email">
                 <label>Password:</label>
                 <input type="password" maxlength="8" placeholder="password">
             </fieldset>
+
+            <!-- submit and reset buttons -->
             <button type="submit" value="submit">submit</button>
             <button type="reset" value="reset">reset</button>
         </fieldset>
+
     </form>
 
 </body>
